[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genepax"
dynamic = ["version"]
description = "genepax: Jax Accelerated Genetic Programming"
readme = "README.md"
authors = [
    { name = "Giorgia Nadizar", email = "giorgia.nadizar@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["genetic programming", "evolutionary computation", "interpretability", "symbolic regression", "reinforcement learning"]
requires-python = ">=3.11"

dependencies = [
    "qdax @ git+https://github.com/adaptive-intelligent-robotics/QDax.git@46b8feecae26d79414ce7a1ce731e5cfbeb9837d"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-assume",
    "coverage"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "mkdocs-autorefs",
]
examples = [
    "ipykernel",
    "ipython",
    "seaborn",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/giorgia-nadizar/genepax"

[tool.hatch.version]
path = "genepax/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.11"
namespace_packages = true
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "experiments.*"
ignore_errors = true
